LASB-742: I've refactored a line of code that initialises a list